Fix JwtFilter completely